--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,8 @@
     <link rel="stylesheet" type="text/css" href="%SNOWPACK_PUBLIC_RENDERER_BASE_HREF%/index.css" />
   </head>
   <body>
-    <div class="App">
-      <header class="App-header">
-        <img class="App-logo" src="%SNOWPACK_PUBLIC_BASE_HREF%/electron-snowpack.svg" />
-        <h1>Welcome to Electron + Snowpack!</h1>
-        <p id="content"></p>
-        <p id="counter"></p>
-      </header>
+    <div id="root">
+      <h1>Welcome to Open Diffix Publish</h1>
     </div>
     <script type="module" src="%SNOWPACK_PUBLIC_RENDERER_BASE_HREF%/index.js"></script>
   </body>
