Remove fake drag zone

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <title>Open Diffix Publisher</title>
     <link rel="stylesheet" type="text/css" href="%SNOWPACK_PUBLIC_RENDERER_BASE_HREF%/index.css" />
   </head>
-  <body class="bg-black text-gray-50 p-5">
-    <div style="-webkit-app-region: drag" class="w-full h-8"></div>
+  <body class="p-5 bg-black text-gray-50">
     <div id="root">
       <h1>Welcome to Open Diffix Publish</h1>
     </div>
