--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Open Diffix Publisher</title>
+    <title>Easy Diffix - Open Diffix Publisher</title>
     <link rel="stylesheet" type="text/css" href="%SNOWPACK_PUBLIC_RENDERER_BASE_HREF%/index.css" />
   </head>
-  <body class="p-5 bg-black text-gray-50">
+  <body class="p-5 text-gray-800">
     <div id="root">
-      <h1>Welcome to Open Diffix Publish</h1>
+      <h1>Welcome to Easy Diffix</h1>
     </div>
     <script type="module" src="%SNOWPACK_PUBLIC_RENDERER_BASE_HREF%/index.js"></script>
   </body>
