Add ugly ass side-bar

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Easy Diffix - Open Diffix Publisher</title>
   </head>
-  <body class="p-5 text-gray-800">
+  <body class="text-gray-800">
     <div id="root">
       <h1>Welcome to Easy Diffix</h1>
     </div>
