Slight window dressing

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="text-gray-800">
     <div id="root">
-      <h1>Welcome to Easy Diffix</h1>
+      <h1>Loading Easy Diffix</h1>
     </div>
   </body>
 </html>
