--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div id="main"></div>
   </body>
 </html>
