--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <meta charset="utf-8" />
+    <title>Easy Diffix - Open Diffix Publisher</title>
   </head>
   <body>
-    <div id="main"></div>
+    <div id="root"></div>
   </body>
 </html>
