Change app name to "Diffix for Desktop".

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Easy Diffix - Open Diffix Publisher</title>
+    <title>Diffix for Desktop</title>
   </head>
   <body>
     <div id="root"></div>
